--- a/.gitignore
+++ b/.gitignore
@@ -362,5 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-/vcpkg_installed/x64-windows
+# Project dependencies and assets
+/vcpkg_installed/
 /LowerDeck Engine/packages.config
