--- a/LowerDeck Engine/imgui.ini
+++ b/LowerDeck Engine/imgui.ini
@@ -4,20 +4,64 @@ Size=1280,778
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=767,135
+Size=351,400
 Collapsed=0
 
 [Window][TEST]
-Pos=74,153
-Size=32,38
+Pos=147,91
+Size=456,778
 Collapsed=1
 
 [Window][Scene]
+Pos=0,22
+Size=896,586
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Properties]
+Pos=898,22
+Size=382,113
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Camera]
+Pos=898,219
+Size=382,581
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][dck]
 Pos=60,60
-Size=32,38
+Size=504,405
 Collapsed=0
 
+[Window][Render Targets]
+Pos=0,22
+Size=896,586
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Log]
+Pos=0,610
+Size=896,190
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Viewport dims]
+Pos=898,137
+Size=382,80
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=324,189 Size=1280,778 CentralNode=1
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,22 Size=1280,778 Split=X
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1536,1035 Split=Y Selected=0xE192E354
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1636,586 CentralNode=1 Selected=0xE192E354
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=1636,190 Selected=0x64F50EE5
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=382,1035 Split=Y Selected=0x199AB496
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=259,151 Selected=0x199AB496
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=259,882 Split=Y Selected=0xEDD7E1AE
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=259,106 Selected=0xEDD7E1AE
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=259,774 Selected=0x0545BD69
 
