--- a/LowerDeck Engine/LowerDeck Engine.vcxproj
+++ b/LowerDeck Engine/LowerDeck Engine.vcxproj
@@ -99,17 +99,35 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\Graphics\Buffer\Buffer.cpp" />
+    <ClCompile Include="Engine\Graphics\Buffer\BufferUtility.cpp" />
+    <ClCompile Include="Engine\Render\Deferred\DeferredContext.cpp" />
+    <ClCompile Include="Engine\D3D\D3D12DepthBuffer.cpp" />
+    <ClCompile Include="Engine\D3D\D3D12RootSignature.cpp" />
     <ClCompile Include="Engine\D3D\D3D12GraphicsPipelineState.cpp" />
     <ClCompile Include="Engine\D3D\D3D12Utility.cpp" />
     <ClCompile Include="Engine\Engine\Engine.cpp" />
     <ClCompile Include="Engine\Graphics\Shader5.cpp" />
     <ClCompile Include="Engine\Render\Camera.cpp" />
-    <ClCompile Include="Dependencies\D3D12MA\D3D12MemAlloc.cpp" />
-    <ClCompile Include="Dependencies\imgui\imgui_draw.cpp" />
-    <ClCompile Include="Dependencies\imgui\imgui_impl_dx12.cpp" />
-    <ClCompile Include="Dependencies\imgui\imgui_impl_win32.cpp" />
-    <ClCompile Include="Dependencies\imgui\imgui_tables.cpp" />
-    <ClCompile Include="Dependencies\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Dependencies\D3D12MA\D3D12MemAlloc.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+      <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TurnOffAllWarnings</WarningLevel>
+    </ClCompile>
+    <ClCompile Include="Dependencies\ImGui\imgui_draw.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+    </ClCompile>
+    <ClCompile Include="Dependencies\ImGui\imgui_impl_dx12.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+    </ClCompile>
+    <ClCompile Include="Dependencies\ImGui\imgui_impl_win32.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+    </ClCompile>
+    <ClCompile Include="Dependencies\ImGui\imgui_tables.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+    </ClCompile>
+    <ClCompile Include="Dependencies\ImGui\imgui_widgets.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+    </ClCompile>
     <ClCompile Include="Editor\Editor.cpp" />
     <ClCompile Include="Engine\D3D\D3D12Command.cpp" />
     <ClCompile Include="Engine\D3D\D3D12Context.cpp" />
@@ -117,15 +135,34 @@
     <ClCompile Include="Engine\D3D\D3D12Device.cpp" />
     <ClCompile Include="Engine\D3D\D3D12SwapChain.cpp" />
     <ClCompile Include="Engine\D3D\D3D12Viewport.cpp" />
+    <ClCompile Include="Engine\Render\Model\Importer.cpp" />
+    <ClCompile Include="Engine\Render\Model\Model.cpp" />
     <ClCompile Include="Engine\Window\Window.cpp" />
-    <ClCompile Include="Dependencies\imgui\imgui.cpp" />
+    <ClCompile Include="Dependencies\ImGui\imgui.cpp">
+      <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
+    </ClCompile>
+    <ClCompile Include="Engine\Render\Deferred\GBufferPass.cpp" />
     <ClCompile Include="Input\CameraInput.cpp" />
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Engine\Engine\Renderer.cpp" />
     <ClCompile Include="Engine\ECS\World.cpp" />
     <ClCompile Include="Engine\Graphics\ShaderManager.cpp" />
+    <ClCompile Include="Engine\Render\Deferred\ScreenOutput.cpp" />
+    <ClCompile Include="Engine\Scene\Scene.cpp" />
+    <ClCompile Include="Engine\Graphics\RenderTexture.cpp" />
+    <ClCompile Include="Engine\Graphics\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Dependencies\EnTT\entt.hpp" />
+    <ClInclude Include="Engine\Graphics\Buffer\Buffer.hpp" />
+    <ClInclude Include="Engine\Graphics\Buffer\BufferUtility.hpp" />
+    <ClInclude Include="Engine\Graphics\Buffer\ConstantBuffer.hpp" />
+    <ClInclude Include="Engine\Graphics\Buffer\ConstantTypes.hpp" />
+    <ClInclude Include="Engine\Graphics\Buffer\Vertex.hpp" />
+    <ClInclude Include="Engine\Render\Deferred\DeferredContext.hpp" />
+    <ClInclude Include="Engine\D3D\D3D12DepthBuffer.hpp" />
+    <ClInclude Include="Engine\D3D\D3D12RootSignature.hpp" />
     <ClInclude Include="Engine\D3D\D3D12GraphicsPipelineState.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Descriptor.hpp" />
     <ClInclude Include="Engine\ECS\Component.hpp" />
@@ -133,13 +170,13 @@
     <ClInclude Include="Engine\Render\Camera.hpp" />
     <ClInclude Include="Dependencies\D3D12MA\D3D12MemAlloc.h" />
     <ClInclude Include="Dependencies\d3dx12.h" />
-    <ClInclude Include="Dependencies\imgui\imconfig.h" />
-    <ClInclude Include="Dependencies\imgui\imgui_impl_dx12.h" />
-    <ClInclude Include="Dependencies\imgui\imgui_impl_win32.h" />
-    <ClInclude Include="Dependencies\imgui\imgui_internal.h" />
-    <ClInclude Include="Dependencies\imgui\imstb_rectpack.h" />
-    <ClInclude Include="Dependencies\imgui\imstb_textedit.h" />
-    <ClInclude Include="Dependencies\imgui\imstb_truetype.h" />
+    <ClInclude Include="Dependencies\ImGui\imconfig.h" />
+    <ClInclude Include="Dependencies\ImGui\imgui_impl_dx12.h" />
+    <ClInclude Include="Dependencies\ImGui\imgui_impl_win32.h" />
+    <ClInclude Include="Dependencies\ImGui\imgui_internal.h" />
+    <ClInclude Include="Dependencies\ImGui\imstb_rectpack.h" />
+    <ClInclude Include="Dependencies\ImGui\imstb_textedit.h" />
+    <ClInclude Include="Dependencies\ImGui\imstb_truetype.h" />
     <ClInclude Include="Editor\Editor.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Command.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Context.hpp" />
@@ -149,25 +186,62 @@
     <ClInclude Include="Engine\D3D\D3D12Types.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Utility.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Viewport.hpp" />
+    <ClInclude Include="Engine\Render\Model\Importer.hpp" />
+    <ClInclude Include="Engine\Render\Model\Mesh.hpp" />
+    <ClInclude Include="Engine\Render\Model\Model.hpp" />
+    <ClInclude Include="Engine\Utility\FileSystem.hpp" />
+    <ClInclude Include="Engine\Utility\MemoryUsage.hpp" />
     <ClInclude Include="Engine\Utility\Timer.hpp" />
     <ClInclude Include="Engine\Utility\TimeUtility.hpp" />
     <ClInclude Include="Engine\Utility\Utility.hpp" />
     <ClInclude Include="Engine\Window\Window.hpp" />
-    <ClInclude Include="Dependencies\imgui\imgui.h" />
+    <ClInclude Include="Dependencies\ImGui\imgui.h" />
+    <ClInclude Include="Engine\Render\Deferred\GBufferPass.hpp" />
     <ClInclude Include="Input\CameraInput.hpp" />
     <ClInclude Include="Engine\Engine\Renderer.hpp" />
     <ClInclude Include="Engine\ECS\World.hpp" />
     <ClInclude Include="Engine\Graphics\ShaderManager.hpp" />
     <ClInclude Include="Engine\Graphics\Shader5.hpp" />
+    <ClInclude Include="Engine\Render\Deferred\ScreenOutput.hpp" />
+    <ClInclude Include="Engine\Scene\Scene.hpp" />
+    <ClInclude Include="Engine\Graphics\RenderTexture.hpp" />
+    <ClInclude Include="Engine\Graphics\Texture.hpp" />
+    <ClInclude Include="Logger.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Shaders\Deferred\Deferred_Common.hlsli">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </None>
+    <None Include="Shaders\Deferred\GBuffer.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Assets\Fonts\CascadiaCode-Bold.ttf">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
     </Font>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders\Default_Forward.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">6.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Shaders\Deferred\DeferredOutput_PS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">6.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Shaders\Deferred\DeferredOutput_VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">6.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Shaders\Deferred\GBuffer.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">6.0</ShaderModel>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
