--- a/LowerDeck Engine/imgui.ini
+++ b/LowerDeck Engine/imgui.ini
@@ -15,21 +15,21 @@ Collapsed=1
 
 [Window][Scene]
 Pos=0,22
-Size=896,586
+Size=796,581
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=898,22
-Size=382,113
+Pos=798,22
+Size=482,113
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Camera]
-Pos=898,219
-Size=382,581
+Pos=798,219
+Size=482,162
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000B,0
 
 [Window][dck]
 Pos=60,60
@@ -38,30 +38,52 @@ Collapsed=0
 
 [Window][Render Targets]
 Pos=0,22
-Size=896,586
+Size=1516,838
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Log]
-Pos=0,610
-Size=896,190
+Pos=0,605
+Size=796,195
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Viewport dims]
-Pos=898,137
-Size=382,80
+Pos=798,137
+Size=482,80
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][GBuffer]
+Pos=0,22
+Size=796,581
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Non-given]
+Pos=798,361
+Size=482,439
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][SciFiHelmet]
+Pos=798,383
+Size=482,417
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,22 Size=1280,778 Split=X
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1536,1035 Split=Y Selected=0xE192E354
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1636,586 CentralNode=1 Selected=0xE192E354
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=1636,190 Selected=0x64F50EE5
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=382,1035 Split=Y Selected=0x199AB496
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=259,151 Selected=0x199AB496
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=259,882 Split=Y Selected=0xEDD7E1AE
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=259,106 Selected=0xEDD7E1AE
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=259,774 Selected=0x0545BD69
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,22 Size=1280,778 Split=X
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1436,1035 Split=Y Selected=0xE192E354
+    DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=1616,838 CentralNode=1 Selected=0xE192E354
+    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=1616,195 Selected=0x64F50EE5
+  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=482,1035 Split=Y Selected=0x199AB496
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=259,151 Selected=0x199AB496
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=259,882 Split=Y Selected=0xEDD7E1AE
+      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=259,106 Selected=0xEDD7E1AE
+      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=259,774 Split=Y Selected=0x0545BD69
+        DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=482,140 Split=Y Selected=0x0545BD69
+          DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=482,162 Selected=0x0545BD69
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=482,417 Selected=0xCF7F5689
+        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=482,439 Selected=0x047F20D3
 
